--- a/Training/app/src/main/res/layout/activity_my_cards.xml
+++ b/Training/app/src/main/res/layout/activity_my_cards.xml
@@ -5,9 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.madara.training.MyCards">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_card"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.madara.training.MainActivity">
+        <!--<Button-->
+        <!--android:id="@+id/btn_getlocation"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="getloation"/>-->
+
+    </android.support.v7.widget.RecyclerView>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:orientation="vertical">
         <Button
