--- a/Training/app/src/main/res/layout/dialog_get_password.xml
+++ b/Training/app/src/main/res/layout/dialog_get_password.xml
@@ -8,53 +8,55 @@
     tools:context="com.example.madara.training.MyCards"
     >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Enter Your Password"
-            android:textSize="18sp"
             android:textColor="#000"
-            android:id="@+id/heading"/>
+            android:textSize="18sp"/>
 
         <EditText
+            android:id="@+id/et_get_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/heading"
-            android:layout_marginTop="20dp"
             android:background="@null"
-            android:textColor="#000"
-            android:hint="password"
+            android:hint="Password"
             android:inputType="textPassword"
-            android:id="@+id/et_get_password"/>
+            android:padding="10dp"
+            android:textColor="#000"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="OK"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:textSize="18sp"
-            android:textColor="#33bbff"
-            android:id="@+id/tv_action_ok"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/btn_action_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginRight="20dp"
+                android:text="CANCEL"
+                android:textSize="18sp"/>
+            <Button
+                android:id="@+id/btn_action_ok"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:text="OK"
+                android:textSize="18sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CANCEL"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="20dp"
-            android:textSize="18sp"
-            android:textColor="#33bbff"
-            android:id="@+id/tv_action_cancel"/>
+        </RelativeLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
