--- a/Training/app/src/main/res/layout/activity_qrscanner.xml
+++ b/Training/app/src/main/res/layout/activity_qrscanner.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.madara.training.QRScanner">
     <SurfaceView
+        android:layout_centerInParent="true"
         android:id="@+id/cameraView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
