--- a/Training/app/src/main/res/layout/activity_splash.xml
+++ b/Training/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.madara.training.SplashActivity">
-
+    tools:context="com.example.madara.training.SplashActivity"
+    android:background="@color/background_color">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"/>
+    </LinearLayout>
 </RelativeLayout>
