--- a/Training/app/src/main/res/layout/activity_main.xml
+++ b/Training/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
     <Button
         android:id="@+id/mycard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="mycards"/>
-
+    <TextView
+        android:id="@+id/tv_tst"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="location"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:theme="@style/progressBar"
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:layout_margin="16dp"
+        android:layout_below="@+id/mycard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.madara.training.MainActivity">
@@ -23,4 +36,4 @@
             <!--android:text="getloation"/>-->
 
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+</RelativeLayout>
