--- a/Training/app/src/main/res/layout/activity_register.xml
+++ b/Training/app/src/main/res/layout/activity_register.xml
@@ -6,62 +6,75 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     tools:context="com.example.madara.training.RegisterActivity">
+
     <LinearLayout
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo3"/>
+
         <EditText
             android:id="@+id/et_username"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"/>
+            android:hint="Username"
+            android:textSize="20sp" />
+
         <EditText
             android:id="@+id/et_email"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email address"
-            />
+            android:textSize="20sp" />
+
         <EditText
             android:id="@+id/et_phone"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone number"
-            />
+            android:textSize="20sp" />
+
         <EditText
             android:id="@+id/et_password"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Password"
             android:inputType="textPassword"
-            android:hint="Password"/>
+            android:textSize="20sp" />
+
         <EditText
             android:id="@+id/et_re_password"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Re-type password"
             android:inputType="textPassword"
-            android:hint="Re-type password"/>
+            android:textSize="20sp" />
+
         <Button
-            android:layout_marginTop="16dp"
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign Up"
-            android:textColor="@color/white_color"
+            android:layout_marginTop="16dp"
             android:background="@drawable/credential_button"
-            android:textAllCaps="false"/>
-        <TextView android:id="@+id/link_login"
-            android:layout_width="match_parent"
+            android:text="Sign Up"
+            android:textAllCaps="false"
+            android:textColor="@color/white_color"
+            />
+
+        <TextView
+            android:id="@+id/link_login"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center"
+            android:text="Already a member? Login"
             android:textColor="@color/blue_color"
             android:textSize="16sp"
-            android:text="Already a member? Login"
             />
     </LinearLayout>
 </RelativeLayout>
