--- a/Training/app/src/main/res/layout/activity_splash.xml
+++ b/Training/app/src/main/res/layout/activity_splash.xml
@@ -13,6 +13,6 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo3"/>
     </LinearLayout>
 </RelativeLayout>
