--- a/Training/app/src/main/res/values/styles.xml
+++ b/Training/app/src/main/res/values/styles.xml
@@ -19,6 +19,9 @@
         <item name="colorPrimaryDark">@color/blue_color</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="progressBar">
+        <item name="colorAccent">@color/red_color</item>
+    </style>
     <style name="AppTheme_Dark_Dialog">
 
     </style>
