--- a/Training/app/src/main/res/layout/activity_splash.xml
+++ b/Training/app/src/main/res/layout/activity_splash.xml
@@ -9,10 +9,11 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_centerInParent="true">
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/logo3"/>
     </LinearLayout>
 </RelativeLayout>
