--- a/Training/app/src/main/res/layout/activity_main.xml
+++ b/Training/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="com.example.madara.training.MainActivity"
     android:id="@+id/drawer">
-
-    <android.support.design.widget.NavigationView
-        app:headerLayout="@layout/header"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@color/white_color"
-        app:itemTextColor="@color/dark_black_color"
-        app:itemIconTint="@color/grey_dark_color"
-        app:menu="@menu/drawermenu"
-        android:layout_gravity="start"
-        >
-    </android.support.design.widget.NavigationView>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/mycard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="mycards" />
-
         <TextView
             android:id="@+id/tv_tst"
             android:layout_width="wrap_content"
@@ -46,15 +27,21 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/mycard"
             android:layout_margin="16dp"
-            tools:context="com.example.madara.training.MainActivity">
-            <!--<Button-->
-            <!--android:id="@+id/btn_getlocation"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="getloation"/>-->
+            >
 
         </android.support.v7.widget.RecyclerView>
     </RelativeLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        app:headerLayout="@layout/header"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/white_color"
+        app:itemTextColor="@color/dark_black_color"
+        app:itemIconTint="@color/grey_dark_color"
+        app:menu="@menu/drawermenu"
+        android:layout_gravity="start"
+        >
+    </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
