--- a/Training/app/src/main/res/layout/activity_register.xml
+++ b/Training/app/src/main/res/layout/activity_register.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:background="@color/white_color"
     tools:context="com.example.madara.training.RegisterActivity">
 
     <LinearLayout
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
         <ImageView
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="24dp"
             android:src="@drawable/logo3"/>
 
         <EditText
