--- a/Training/app/src/main/res/layout/row_card.xml
+++ b/Training/app/src/main/res/layout/row_card.xml
@@ -2,32 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#fff"
-    android:paddingTop="4dp"
-    android:layout_marginBottom="4dp">
+    android:layout_height="72dp"
+    android:background="@drawable/rectangle_background"
+    android:layout_marginTop="6dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    >
 
     <RelativeLayout
+        android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp" >
 
-        <!--<ImageView-->
-            <!--android:id="@+id/img_rfid_logo"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:src="@drawable/rfid" />-->
-        <TextView
+        <ImageView
             android:id="@+id/img_rfid_logo"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:text="A"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textStyle="normal"
-            android:textColor="@color/white_color"
-            android:background="@drawable/circle_shape"/>
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/rfid" />
+        <!--<TextView-->
+            <!--android:id="@+id/img_rfid_logo"-->
+            <!--android:layout_width="48dp"-->
+            <!--android:layout_height="48dp"-->
+            <!--android:text="A"-->
+            <!--android:fontFamily="sans-serif"-->
+            <!--android:textAlignment="center"-->
+            <!--android:gravity="center"-->
+            <!--android:textSize="36sp"-->
+            <!--android:textStyle="normal"-->
+            <!--android:backgroundTint="@color/green_color"-->
+            <!--android:textColor="@color/white_color"-->
+            <!--android:background="@drawable/circle_shape"/>-->
 
         <TextView
             android:id="@+id/tv_card_num"
@@ -35,10 +41,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/img_rfid_logo"
             android:layout_toRightOf="@id/img_rfid_logo"
             android:textSize="20sp"
+            android:textColor="@color/dark_black_color"
             tools:text="1514128888958958" />
 
 
