--- a/Training/app/src/main/res/layout/activity_my_cards.xml
+++ b/Training/app/src/main/res/layout/activity_my_cards.xml
@@ -10,12 +10,13 @@
         android:id="@+id/recyclerView_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.madara.training.MainActivity">
+        android:overScrollMode="never">
         <!--<Button-->
         <!--android:id="@+id/btn_getlocation"-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:text="getloation"/>-->
+
 
     </android.support.v7.widget.RecyclerView>
 
