--- a/Training/app/src/main/res/layout/garage_row.xml
+++ b/Training/app/src/main/res/layout/garage_row.xml
@@ -1,29 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:orientation="vertical">
-
+    android:layout_height="108dp"
+    android:background="@drawable/rectangle_background"
+    android:layout_marginTop="6dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    >
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/garage_name"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:layout_width="108dp"
+            android:layout_height="106dp"
+            android:src="@drawable/g6"
+            android:background="@color/white_color"/>
+        <LinearLayout
+            android:layout_margin="6dp"
+            android:layout_centerVertical="true"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="name"
-            android:textSize="24sp"/>
-
-        <TextView
-            android:id="@+id/garage_distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="distance"
-            android:layout_marginLeft="10dp"
-            android:textSize="24sp"/>
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/garage_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Anwar Al Madinah"
+                android:fontFamily="sans-serif-condensed"
+                android:textColor="@color/dark_black_color"
+                android:textSize="18sp"/>
+            <RatingBar
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/ratingBarStyleSmall"
+                android:theme="@style/RatingBar"
+                android:rating="5"
+                android:numStars="5"
+                android:stepSize="0.1"
+                android:isIndicator="true" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+                <ImageView
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:src="@drawable/ic_location_on_black_24dp"/>
+                <TextView
+                    android:layout_marginLeft="4dp"
+                    android:id="@+id/garage_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="0.6 km from centre"
+                    android:textSize="12sp"/>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
