--- a/Training/app/src/main/res/layout/header.xml
+++ b/Training/app/src/main/res/layout/header.xml
@@ -2,13 +2,13 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@color/green_color"
+    android:background="@color/red_color"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="24dp">
     <ImageView
         android:src="@drawable/person_icon"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         />
     <TextView
         android:layout_width="wrap_content"
@@ -16,7 +16,7 @@
         android:text="Ahmed ali"
         android:textColor="@color/white_color"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="14dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
