--- a/Training/app/src/main/res/values/colors.xml
+++ b/Training/app/src/main/res/values/colors.xml
@@ -17,5 +17,9 @@
     <color name="gold_color">#ffc000</color>
     <color name="white_color">#ffffff</color>
     <color name="dark_black_color">#000000</color>
+    <color name="duskYellow">#F9F398</color>
+    <color name="lightGrey">#d3d3d3</color>
+    <color name="light2grey">#DDDCDC</color>
+    <color name="foreground_material_dark">#6a3636</color>
 
 </resources>
