--- a/Training/app/src/main/res/layout/header.xml
+++ b/Training/app/src/main/res/layout/header.xml
@@ -4,11 +4,13 @@
     android:layout_height="160dp"
     android:background="@color/red_color"
     android:orientation="vertical"
-    android:padding="24dp">
+    android:padding="16dp"
+    android:gravity="bottom"
+    android:overScrollMode="never">
     <ImageView
         android:src="@drawable/person_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         />
     <TextView
         android:layout_width="wrap_content"
@@ -16,7 +18,7 @@
         android:text="Ahmed ali"
         android:textColor="@color/white_color"
         android:textStyle="bold"
-        android:layout_marginTop="14dp"/>
+        android:layout_marginTop="5dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
