--- a/Training/app/src/main/res/menu/drawermenu.xml
+++ b/Training/app/src/main/res/menu/drawermenu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/it_profile" android:title="My profile" android:icon="@drawable/ic_person_black_24dp"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+<item android:id="@+id/it_profile" android:title="My profile"  android:icon="@drawable/ic_person_black_24dp"/>
     <item android:id="@+id/it_cards" android:title="My cards" android:icon="@drawable/ic_aspect_ratio_black_24dp"/>
     <item android:id="@+id/it_garages" android:title="My garages" android:icon="@drawable/ic_my_location_black_24dp"/>
     <item android:id="@+id/it_charge" android:title="Charge" android:icon="@drawable/ic_attach_money_black_24px"/>
