--- a/Training/app/src/main/res/layout/activity_about.xml
+++ b/Training/app/src/main/res/layout/activity_about.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context="com.example.madara.training.About">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="170dp"
+            android:paddingBottom="24dp"
+            android:src="@drawable/logo2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="This is a demo app version 1.0"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"/>
+
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
