--- a/Training/app/src/main/res/layout/garage_row.xml
+++ b/Training/app/src/main/res/layout/garage_row.xml
@@ -2,64 +2,130 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="108dp"
-    android:background="@drawable/rectangle_background"
-    android:layout_marginTop="6dp"
+    android:layout_height="144dp"
     android:layout_marginLeft="6dp"
     android:layout_marginRight="6dp"
-    >
+    android:layout_marginTop="6dp"
+    android:background="@drawable/rectangle_background">
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <ImageView
             android:layout_width="108dp"
-            android:layout_height="106dp"
-            android:src="@drawable/g6"
-            android:background="@color/white_color"/>
+            android:layout_height="108dp"
+            android:background="@color/white_color"
+            android:src="@drawable/g6" />
+
         <LinearLayout
-            android:layout_margin="6dp"
-            android:layout_centerVertical="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="6dp"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/garage_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Anwar Al Madinah"
-                android:fontFamily="sans-serif-condensed"
+                android:fontFamily="@font/roboto_medium"
                 android:textColor="@color/dark_black_color"
-                android:textSize="18sp"/>
+                android:textSize="16sp"
+                tools:text="Anwar Al Madinah" />
+
             <RatingBar
                 android:id="@+id/rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 style="?android:attr/ratingBarStyleSmall"
-                android:theme="@style/RatingBar"
-                android:rating="5"
+                android:layout_width="wrap_content"
+                android:layout_height="18dp"
+                android:isIndicator="true"
                 android:numStars="5"
+                android:rating="5"
                 android:stepSize="0.1"
-                android:isIndicator="true" />
+                android:theme="@style/RatingBar" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
+
                 <ImageView
-                    android:layout_gravity="center_vertical"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
-                    android:src="@drawable/ic_location_on_black_24dp"/>
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_location_on_black_24dp" />
+
                 <TextView
-                    android:layout_marginLeft="4dp"
                     android:id="@+id/garage_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="0.6 km from centre"
-                    android:textSize="12sp"/>
+                    android:layout_marginLeft="4dp"
+                    android:fontFamily="@font/roboto"
+                    android:textSize="12sp"
+                    tools:text="0.6 km from centre" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_height="22dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:background="#4CAF50"
+                    android:fontFamily="@font/roboto"
+                    android:textAlignment="center"
+                    android:textColor="@color/white_color"
+                    android:textSize="16sp"
+                    tools:text="9" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:fontFamily="@font/roboto"
+                    android:gravity="center"
+                    android:textColor="#BDBDBD"
+                    android:textSize="12sp"
+                    tools:text="40 Slots" />
+            </LinearLayout>
+            <View
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#BDBDBD"
+                />
+            <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <TextView
+                android:layout_gravity="left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto"
+                android:textStyle="bold"
+                android:textColor="#689F38"
+                android:textSize="18sp"
+                tools:text="2 P"/>
+                <Button
+                    android:layout_alignParentRight="true"
+                    android:textAlignment="center"
+                    android:layout_width="96dp"
+                    android:layout_height="32dp"
+                    android:background="#FF4081"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="@color/white_color"
+                    android:text="View"
+                    />
+            </RelativeLayout>
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
