--- a/Training/app/src/main/res/layout/activity_login.xml
+++ b/Training/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email"
+                    android:fontFamily="@font/roboto"
                     android:textColorHint="@color/white_color"
                     android:textSize="20sp" />
 
@@ -44,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:hint="Password"
+                    android:fontFamily="@font/roboto"
                     android:inputType="textPassword"
                     android:textColorHint="@color/white_color"
                     android:textSize="20sp" />
@@ -56,11 +58,13 @@
                     android:clickable="true"
                     android:gravity="center"
                     android:text="Forget Password?"
+                    android:fontFamily="@font/roboto"
                     android:textColor="@color/white_color"
                     android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/btn_login"
+                    android:fontFamily="@font/roboto"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
@@ -72,6 +76,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:fontFamily="@font/roboto"
                     android:id="@+id/tv_dont_have_account"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
