--- a/Training/app/src/main/res/layout/activity_register.xml
+++ b/Training/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,7 @@
                     android:orientation="vertical">
 
                     <EditText
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/et_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -40,6 +41,7 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/et_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -48,6 +50,7 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/et_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -56,6 +59,7 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/et_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -65,6 +69,7 @@
                         android:textSize="20sp" />
 
                     <EditText
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/et_re_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -74,6 +79,7 @@
                         android:textSize="20sp" />
 
                     <Button
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/btn_register"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_width="match_parent"
@@ -86,6 +92,7 @@
                         android:textSize="20dp" />
 
                     <TextView
+                        android:fontFamily="@font/roboto"
                         android:id="@+id/link_login"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
